--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,13 @@
   height: 100vh;
 }
 .main-cont{
-  width: 100vw;
+  width: 100%;
   height: 80vh;
-  padding-right: 5%;
+  /* padding-right: 5%; */
   display: flex;
-  justify-content: end;
-  align-items: center;
-  gap: 5%;
-  background-color: aqua;
+  /* justify-content: end; */
+  /* align-items: center; */
+  /* gap: 5%; */
 }
 .header-cont{
   width: 100%;
@@ -25,6 +24,37 @@
   background: none;
   color: rgb(220, 220, 220);
 }
+.dropdown-menu{
+  background: rgb(220, 220, 220) !important;
+  width: 20vw;
+  overflow: hidden;
+  font-family: sans-serif;
+}
+.dropdown-menu{
+  padding: 10% !important;
+}
+.dropdown-menu li{
+  margin: 10% 0;
+  font-size: 25px;
+}
+.dropdown-menu .dropdown-item{
+  display: flex;
+  align-items: center;
+  gap: 7%;
+}
+.dropdown-menu .user-info div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.dropdown-menu img{
+  width: 100%;
+  border-radius: 50%;
+  margin-bottom: 3%;
+}
+
+/* Login and Signup Style */
 .login-cont{
   width: 100%;
   height: 85vh;
@@ -35,7 +65,6 @@
     background: rgb(47, 52, 73);
 }
 .form-cont{
-  /* background: red; */
   width: 70%;
   height: 70%;
   display: flex;
@@ -68,4 +97,88 @@
   margin-right: -35%;
   filter: blur(6px);
     -webkit-filter: blur(6px);
+}
+
+
+/* Main Container Styling */
+.map-cont{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.input-cont{
+  z-index: 5;
+  display: flex;
+  align-items: baseline;
+  justify-content: center;
+  align-self: flex-end;
+  width: 40%;
+  padding: 2% 1%;
+  margin-top: 2.3%;
+  gap: 5px;
+}
+.input-cont input{
+  border-radius: 8px;
+  border: 2px solid rgb(220, 220, 220);
+}
+.input-cont input:focus{
+  outline-color: rgb(220, 220, 220);
+}
+.input-cont button{
+  margin-left: 5px;
+}
+.dropdown-menu{
+  height: 88.9vh;
+}
+
+.res-cont{
+  position: absolute;
+  z-index: 5;
+  width: 20%;
+  height: 25%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: rgba(255, 255, 255, 0.31);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(2.7px);
+    -webkit-backdrop-filter: blur(2.7px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+  align-self: flex-end;
+  margin-left: 68%;
+}
+.new-cont{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  z-index: 5;
+  width: 20%;
+  height: 35%;
+  padding: 4% 2%;
+  margin-left: 20%;
+  background: rgba(255, 255, 255, 0.31);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(2.7px);
+  -webkit-backdrop-filter: blur(2.7px);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  align-self: center;
+}
+.new-cont form{
+  display: flex;
+  flex-direction: column;
+}
+.new-cont form input{
+  border-radius: 8px;
+  border: 2px solid rgb(220, 220, 220);
+  margin-bottom: 4%;
+}
+.new-cont input:focus {
+  outline-color: rgb(220, 220, 220);
 }
