--- a/src/App.css
+++ b/src/App.css
@@ -182,3 +182,46 @@
 .new-cont input:focus {
   outline-color: rgb(220, 220, 220);
 }
+
+/* Main Page Style */
+
+.main-page{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: 85vh;
+  padding-top: 3%;
+  background-image: linear-gradient( rgb(47, 52, 73), rgb(220, 220, 220));
+}
+.main-page-cont{
+  display: flex;
+  gap: 5%;
+  width: 70%;
+  height: 50%;
+}
+.main-card{
+  width: 100%;
+  /* background: red; */
+  height: 10vh;
+  border-radius: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 7%;
+  padding: 8%;
+  font-size: 40px;
+  border: 3px solid black;
+}
+.main-card-1{
+  height: 10%;
+  width: 30%;
+  padding: 5%;
+    font-size: 40px;
+  border: 3px solid black;
+    border-radius: 8px;
+  display: flex;
+    justify-content: center;
+    align-items: center;
+}
