--- a/src/App.css
+++ b/src/App.css
@@ -25,13 +25,17 @@
   color: rgb(220, 220, 220);
 }
 .dropdown-menu{
-  background: rgb(220, 220, 220) !important;
+  /* background: rgb(220, 220, 220) !important; */
   width: 20vw;
   overflow: hidden;
   font-family: sans-serif;
+  /* display: flex;
+  flex-direction: column; */
 }
 .dropdown-menu{
   padding: 10% !important;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  margin-top: 35% !important
 }
 .dropdown-menu li{
   margin: 10% 0;
@@ -49,11 +53,11 @@
   flex-direction: column;
 }
 .dropdown-menu img{
-  width: 100%;
+  width: 60%;
   border-radius: 50%;
-  margin-bottom: 3%;
-}
-
+  margin-bottom: 5%;
+  border: 1px solid #fff;
+box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;}
 /* Login and Signup Style */
 .login-cont{
   width: 100%;
@@ -85,7 +89,7 @@
 .form-cont form input{
   padding: 5%;
   border-radius: 16px;
-  border: 0px solid white;
+  border: 0px solid white;input
 }
 .form-cont input:focus{
   outline: none;
@@ -98,7 +102,12 @@
   filter: blur(6px);
     -webkit-filter: blur(6px);
 }
-
+.signup-form-cont form{
+  padding: 2.5% 8%;
+}
+.signup-form-cont form p{
+  margin: 6px 0;
+}
 
 /* Main Container Styling */
 .map-cont{
@@ -111,10 +120,11 @@
 .input-cont{
   z-index: 5;
   display: flex;
+  flex-direction: column;
   align-items: baseline;
   justify-content: center;
   align-self: flex-end;
-  width: 40%;
+  /* width: 40%; */
   padding: 2% 1%;
   margin-top: 2.3%;
   gap: 5px;
@@ -130,7 +140,7 @@
   margin-left: 5px;
 }
 .dropdown-menu{
-  height: 88.9vh;
+  height: 85vh;
 }
 
 .res-cont{
